services/fd-tagging-tool/src/test/resources/valid/ValidCombination/BasicValidTest.tg
package valid.ValidCombination;

tagging BasicValidTest {
    feature Car contains sink;
}